# openclaw-man

./: .gitignore  README.md  gongzhao.md  websocket-test.html
openclaw-man-app/: README.md  project.config.json  project.private.config.json
openclaw-man-app/docs/: prd.md  tech_arch.md  wechat-integration.md  wechat-websocket-integration.md
openclaw-man-app/miniprogram/: app.js  app.json  app.wxss  config.js
openclaw-man-app/miniprogram/api/: conversation.js  robot.js
openclaw-man-app/miniprogram/pages/add-robot/: add-robot.js  (+3 more)
openclaw-man-app/miniprogram/util/: auth.js  request.js
openclaw-man-server/: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  nginx.conf.example  pyproject.toml  test_chat_history.py  test_get_history.py
openclaw-man-server/chat_history/: user_123.json
openclaw-man-server/config/: settings.yaml
openclaw-man-server/docs/: api-conversations.md  api-reference.md  architecture.md  we-xcx-protocol.md  wechat-websocket-integration.md
openclaw-man-server/src/openclaw_man_server/: chat_history.py  config.py  logger.py  main.py  test_client.py
openclaw-man-server/src/openclaw_man_server/api_server/: api.py  auth.py  crud.py  database.py  models.py  schemas.py
openclaw-man-server/src/openclaw_man_server/ws_server/: bridge.py
openclaw-man-we-app-channel/: README.md  index.test.ts  index.ts  openclaw.plugin.json  package-lock.json  package.json  package_plugin.sh  tsconfig.json
openclaw-man-we-app-channel/docs/: we-xcx-protocol.md
openclaw-man-we-app-channel/test/: run-client.sh  test-client.js
(+20 files in other folders)
